quite action form

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -7,7 +7,7 @@
   </article>
   <article class="main__introduceNumber">
     <h3 class="main__introduce__title">Introduce un número</h3>
-    <form class="main__introduce__form" action="">
+    <form class="main__introduce__form">
       <input class="main__number introduce__number__js" type="number" placeholder="Introduce un número...">
       <input class="main__button__try button__try__js" type="submit" value="Prueba">
       <input class="main__button__reset button__reset__js"type="button" value="Reset">
